--- a/PDS2-I6-25-1-main/PDS2-I6-25-1-main/LojaMVC/src/main/java/view/CadastroUsuarios.fxml
+++ b/PDS2-I6-25-1-main/PDS2-I6-25-1-main/LojaMVC/src/main/java/view/CadastroUsuarios.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -139,16 +140,12 @@
                               <Font size="14.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="txtAniversario" layoutX="205.0" layoutY="27.0" maxWidth="150.0" prefHeight="30.0" prefWidth="238.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </TextField>
                         <TextField fx:id="txtEmail" layoutX="205.0" layoutY="112.0" maxWidth="150.0" prefHeight="30.0" prefWidth="238.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
                            <font>
                               <Font size="14.0" />
                            </font>
                         </TextField>
+                        <DatePicker fx:id="aniversario" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                      </children>
                   </GridPane>
                </children>
