--- a/PDS2-I6-25-1-main/PDS2-I6-25-1-main/LojaMVC/src/main/java/view/Cliente.fxml
+++ b/PDS2-I6-25-1-main/PDS2-I6-25-1-main/LojaMVC/src/main/java/view/Cliente.fxml
@@ -2,50 +2,127 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23.0.1">
+<AnchorPane id="AnchorPane" prefHeight="548.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ClienteController">
    <children>
-      <GridPane layoutX="-1.0" layoutY="1.0" prefHeight="225.0" prefWidth="600.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="311.0" minWidth="10.0" prefWidth="189.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="411.0" minWidth="10.0" prefWidth="411.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Label fx:id="lblNome" text="Nome" GridPane.halignment="CENTER" />
-            <Label fx:id="lblTelefone" text="Telefone" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-            <Label fx:id="lblEndereco" text="Endereço" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
-            <Label fx:id="lblDataNascimento" text="Data de Nascimento" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
-            <TextField fx:id="txtNome" promptText="Ex: Jaqueline" GridPane.columnIndex="1" GridPane.halignment="LEFT" />
-            <TextField fx:id="txtTelefone" promptText="Ex: 47 988808621" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" />
-            <TextField fx:id="txtEndereco" promptText="Ex: Gaspar" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="2" />
-            <TextField fx:id="txtDataNascimento" promptText="Ex:13/04/2004" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="3" />
-         </children>
-      </GridPane>
-      <GridPane layoutY="235.0" prefHeight="165.0" prefWidth="600.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <TextArea fx:id="txtListaClientes" prefHeight="200.0" prefWidth="200.0" GridPane.halignment="CENTER" />
-            <Button fx:id="btnSalvar" mnemonicParsing="false" text="Button" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-         </children>
-      </GridPane>
+      <BorderPane layoutX="14.0" layoutY="14.0" prefHeight="520.0" prefWidth="520.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <top>
+            <Pane prefHeight="60.0" prefWidth="550.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Label alignment="CENTER" layoutY="22.0" prefHeight="20.0" prefWidth="550.0" text="Cadastro e listagem de clientes">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Pane>
+         </top>
+         <bottom>
+            <Pane prefHeight="60.0" prefWidth="550.0" BorderPane.alignment="CENTER">
+               <children>
+                  <GridPane layoutX="-1.0" prefHeight="59.0" prefWidth="550.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Button fx:id="btnSalvar" mnemonicParsing="false" onAction="#btnSalvarClick" prefHeight="30.0" prefWidth="183.0" text="Salvar Clientes" GridPane.columnIndex="1" GridPane.halignment="RIGHT">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                        </Button>
+                     </children>
+                  </GridPane>
+               </children>
+            </Pane>
+         </bottom>
+         <center>
+            <Pane prefHeight="350.0" prefWidth="550.0" BorderPane.alignment="CENTER">
+               <children>
+                  <GridPane hgap="50.0" layoutX="66.0" layoutY="45.0" prefHeight="135.0" prefWidth="419.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="224.0" minWidth="10.0" prefWidth="126.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="290.0" minWidth="10.0" prefWidth="243.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Label alignment="TOP_RIGHT" prefWidth="250.0" text="Nome">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <Label alignment="TOP_RIGHT" prefWidth="250.0" text="Telefone" GridPane.rowIndex="1">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="txtNome" promptText="Ex: Jaqueline Brandão" GridPane.columnIndex="1">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </TextField>
+                        <TextField fx:id="txtTelefone" maxWidth="280.0" prefHeight="30.0" prefWidth="280.0" promptText="Ex: 47988808621" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </TextField>
+                        <Label alignment="TOP_RIGHT" prefHeight="17.0" prefWidth="250.0" text="Data de nascimento" GridPane.rowIndex="3">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <Label alignment="TOP_RIGHT" layoutX="10.0" layoutY="44.0" prefWidth="250.0" text="Endereco" GridPane.rowIndex="2">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="txtDataNascimento" promptText="(formato: yyyy-mm-dd)" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </TextField>
+                        <TextField fx:id="txtEndereco" maxWidth="281.0" prefHeight="30.0" prefWidth="281.0" promptText="Ex: Rua xxxx" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </TextField>
+                     </children>
+                  </GridPane>
+                  <ScrollPane layoutX="64.0" layoutY="214.0" prefHeight="240.0" prefWidth="423.0">
+                     <content>
+                        <TableView fx:id="tabelaClientes" prefHeight="238.0" prefWidth="406.0">
+                            <columns>
+                                <TableColumn fx:id="colNome" prefWidth="150" text="Nome" />
+                                <TableColumn fx:id="colTelefone" prefWidth="100" text="Telefone" />
+                                <TableColumn fx:id="colEndereco" prefWidth="100" text="Endereço" />
+                                <TableColumn fx:id="colDataNascimento" prefWidth="100" text="Data Nascimento" />
+                            </columns>
+                        </TableView>
+                     </content>
+                  </ScrollPane>
+               </children>
+            </Pane>
+         </center>
+      </BorderPane>
    </children>
 </AnchorPane>
